src/objects/FinServ__AccountAccountRelation__c.object
<CustomObject>
    <description>A relationship between two accounts, such as a household and a business account.</description>
    <fields>
        <fullName>FinServ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RelatedFromAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__InverseRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uniquely identifies the relationship between Account__c and RelatedAccount__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
        <label>InverseRelationship</label>
        <referenceTo>FinServ__AccountAccountRelation__c</referenceTo>
        <relationshipLabel>Account Account Relations</relationshipLabel>
        <relationshipName>AccountAccountRelations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RelatedToAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FinServ__ReciprocalRole__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Account Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__ReciprocalRole__c</referenceTo>
        <relationshipName>AccountReciprocalRole</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Account-Account Relationship</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Account Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__AARCanOnlyBeDeactivated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCHANGED(FinServ__Account__c),ISCHANGED(FinServ__RelatedAccount__c),ISCHANGED(FinServ__Role__c)),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>This record can&apos;t be edited. To update relationship information, you can deactivate this record and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__AccountAndRelatedAccountCannotBeSame</fullName>
        <active>true</active>
        <errorConditionFormula>FinServ__Account__c = FinServ__RelatedAccount__c</errorConditionFormula>
        <errorMessage>Account and Related Account must be different entities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__AccountCannotBeAnIndividual</fullName>
        <active>true</active>
        <description>Error message when any selected account is part of an individual in an AAR.</description>
        <errorConditionFormula>OR(ISPICKVAL(FinServ__Account__r.FinServ__IndividualType__c,&apos;Individual&apos;),ISPICKVAL( FinServ__RelatedAccount__r.FinServ__IndividualType__c, &apos;Individual&apos;))</errorConditionFormula>
        <errorMessage>Account can&apos;t be a part of an individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__CannotCreateInactiveRecord</fullName>
        <active>true</active>
        <description>Ensures that a record cannot be created as Inactive</description>
        <errorConditionFormula>AND(ISNEW(),FinServ__Active__c == false)</errorConditionFormula>
        <errorMessage>A Account-Account Relationship cannot be created as Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__InactiveAARCannotBeEdited</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE(FinServ__Active__c) == false,NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Inactive record can&apos;t be edited. To update relationship information, you can create a new one.</errorMessage>
    </validationRules>
</CustomObject>